# queue-event-handler

./: LICENSE  README.md  pyproject.toml  setup.py
events/sqs/: __init__.py  handler.py  sqs.py
queue_event_handler/: __init__.py
queue_event_handler/sqs/: __init__.py  handler.py
